update to jdk 26 and jetty container